# intelligent-document-processing-with-amazon-bedrock

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  app.py  cdk.json  config-example.yml  config.yml  install_deps.sh  install_env.sh  pyproject copy.toml  pyproject.toml  update_ cognito_urls.sh  update_cognito_urls.sh
.github/workflows/: ci.yml
assets/lambda/backend/dynamo_retrieve/: retrieve_list.py
assets/lambda/backend/extract_attributes/: Dockerfile  extract_attributes.py  prompt.py  requirements.txt  utils.py
assets/lambda/backend/extract_attributes/model/: __init__.py
assets/lambda/backend/extract_attributes_llm/: Dockerfile  extract_attributes_llm.py  helpers.py  prompt.py  requirements.txt  utils.py
assets/lambda/backend/extract_attributes_llm/model/: bedrock.py  params.py  parser.py
assets/lambda/backend/get_presigned_url/: get_presigned_url.py
assets/lambda/backend/read_office_docker/: Dockerfile  read_office.py  requirements.txt  utils.py
assets/lambda/backend/run_bedrock_automation/: run_bedrock_automation.py
assets/lambda/backend/run_textract/: run_textract.py  utils.py
assets/lambda/backend/upload_few_shot/: upload_few_shot.py
assets/layers/idp_bedrock/python/: requirements.txt
assets/layers/idp_bedrock/python/model/: parser.py
assets/layers/textractor/: requirements.txt
assets/state_machine/: idp_bedrock.json
assets/streamlit/: .env  .env.example  Dockerfile  pyproject.toml
assets/streamlit/.streamlit/: pages.toml
assets/streamlit/src/: Home.py
assets/streamlit/src/app_pages/: idp_bedrock.py
assets/streamlit/src/components/: api.py  authenticate.py  constants.py  model.py
demo/: idp_bedrock_demo.ipynb  utils.py
demo/example_attributes/: attributes.json  attributes_email.json  attributes_financial.json
demo/originals/: email_1.txt  email_2.txt  email_3.txt  markings.json
infra/: __init__.py  idp_bedrock_stack.py  stack.py
infra/constructs/: __init__.py  api.py  buckets.py  cognito_auth.py  idp_bedrock_api.py  idp_bedrock_buckets.py  idp_bedrock_layers.py  layers.py
infra/stacks/: __init__.py  ecs.py  idp_bedrock_streamlit.py  streamlit.py
mcp/bedrock_server/: README.md  deploy_idp_bedrock_mcp.ipynb  deploy_idp_bedrock_mcp.py  mcp_server.py  requirements.txt  test_mcp_server.py  update_mcp_config.sh  utils.py
mcp/bedrock_server/tests/: __init__.py  test_direct_http.py  test_helpers.py
mcp/local_server/: README.md  deploy_stdio_server.sh  mcp_stdio_server.py  requirements.txt
mcp/server/: README.md  deploy_idp_bedrock_mcp.ipynb  deploy_idp_bedrock_mcp.py  mcp_server.py  test_mcp_server.py  update_cline_token.sh  update_mcp_config.sh  utils.py
mcp/server/tests/: pytest.ini  test_direct_http.py  test_helpers.py
mcp/stdio_server/: README.md  mcp_stdio_server.py
mcp_deploy/tabulate_mcp_server/: README.md  deploy_tabulate_mcp.ipynb  deploy_tabulate_mcp.py  direct_http_test.py  mcp_server.py  requirements.txt  test_client_local.py  test_client_remote.py  test_with_demo_document.py  utils.py
media/: architecture.drawio
src/ecs/: .env  Dockerfile  Makefile  build_docker.sh  pyproject.toml
src/ecs/.streamlit/: config.toml  pages.toml
src/ecs/src/: Home.py
src/ecs/src/app_pages/: idp_bedrock.py
src/ecs/src/components/: api.py  authenticate.py  constants.py  frontend.py  model.py  s3.py  ssm.py  styling.py
src/lambda/get_presigned_url/: get_presigned_url.py
src/lambda/read_office_file/: Dockerfile  read_office.py  requirements.txt  utils.py
src/lambda/retrieve_from_ddb/: retrieve_list.py
src/lambda/run_bda/: run_bda.py
src/lambda/run_idp_on_image/: Dockerfile  helpers.py  prompter.py  requirements.txt  run_idp_on_image.py
src/lambda/run_idp_on_image/model/: bedrock.py
src/lambda/run_idp_on_image/prompts/: prompt.txt  system_prompt.txt
src/lambda/run_idp_on_text/: Dockerfile  prompter.py  requirements.txt  run_idp_on_text.py  utils.py
src/lambda/run_idp_on_text/model/: parser.py
src/lambda/run_idp_on_text/prompts/: prompt.txt  system_prompt.txt
src/lambda/run_textract/: run_textract.py  utils.py
src/lambda/upload_few_shot/: upload_few_shot.py
src/layers/idp_bedrock/python/: requirements.txt
src/layers/idp_bedrock/python/messaging/: service.py
src/layers/idp_bedrock/python/messaging/publishers/: base.py
src/layers/idp_bedrock/python/model/: bedrock.py
src/layers/textractor/: requirements.txt
src/step_functions/: state_machine.json
