[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp*"]

[project]
name = "intelligent-document-processing-bedrock"
version = "0.1.0"
description = "Extract information from unstructured documents at scale with Amazon Bedrock"
authors = [
    {name = "AWS Generative AI Innovation Center"}
]
requires-python = ">=3.10"
dependencies = [
    "aws-cdk-lib>=2.196.0",
    "cdk-nag>=2.35.101",
    "boto3>=1.38.17",
    "constructs>=10.0.0",
    "pyyaml>=6.0.0",
    "aws-lambda-powertools[validation]>=2.25.1",
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "starlette>=0.27.0",
    "botocore>=1.34.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "bedrock-agentcore-starter-toolkit",
    "bedrock-agentcore",
]


[project.scripts]
idp-bedrock-mcp-server = "mcp.local_server.mcp_stdio_server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.10",
    "isort>=6.0.1",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=7.0.0",
    "hypothesis>=6.87.3",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.ruff]
lint.select = ["E", "F", "C", "W", "R", "B", "Q"]
line-length = 120
target-version="py312"
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
