[project]
name = "frontend-intelligent-document-processing-bedrock"
version = "0.1.0"
description = "Frontend for Intelligent Document Processing with Amazon Bedrock"
authors = [
    {name = "AWS Generative AI Innovation Center"}
]
requires-python = ">3.9.5,!=3.9.7,<3.14.0"
dependencies = [
    "boto3==1.37.10",
    "streamlit==1.37.0",
    "st-pages==0.5.0",
    "watchdog==3.0.0",
    "pyjwt==2.7.0",
    "cryptography==43.0.3",
    "python-dotenv==1.0.1",
    "rel==0.4.9.5",
    "pandas==2.2.0",
    "qrcode==7.4.2",
    "aiohttp==3.11.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.10",
    "pre-commit>=4.2.0",
]
